# pass-it-on

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  renovate.json  rustfmt.toml
.github/workflows/: docker-publish.yaml  release.yml  test.yml
examples/: send_to_http.rs  simple_client.rs
resources/configuration/: server_example.toml
resources/docker/: default_server_config.toml  start_server.sh
resources/systemd/: pass-it-on-server-sysusers.conf  pass-it-on-server.service
src/: client.rs  configuration.rs  endpoints.rs  error.rs  interfaces.rs  lib.rs  notifications.rs  server.rs  shutdown.rs
src/configuration/: client_configuration_file.rs  server_configuration_file.rs
src/endpoints/: discord.rs  email.rs  file.rs  matrix.rs
src/endpoints/discord/: webhook.rs
src/endpoints/matrix/: common.rs  notify.rs  verify.rs
src/interfaces/: http.rs  pipe.rs
src/interfaces/http/: http_client.rs  http_server.rs
src/interfaces/pipe/: pipe_client.rs  pipe_server.rs
tests/: client_configuration_tests.rs  server_configuration_tests.rs
