[package]
name = "pass-it-on"
version = "0.3.3"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me"]
edition = "2021"
rust-version = "1.65"
description = "A library that provides a simple notification client and server that receives messages and passes them on to endpoints"
documentation = "https://docs.rs/crate/pass-it-on"
homepage = "https://github.com/kwheelans/pass-it-on"
license = "MIT"
keywords = ["notify", "notification", "server", "client"]
readme = "README.md"
repository = "https://github.com/kwheelans/pass-it-on"


[package.metadata.docs.rs]
all-features = true

[features]
default = ["server-bin","client", "parse-cfg", "pipe", "http", "file", "matrix"]
client = ["interfaces", "tokio", "tokio/signal", "tokio/time"]
endpoints = ["dep:async-trait","dep:dyn-clone", "dep:typetag"]
file = ["endpoints", "dep:log", "tokio/io-util"]
http = ["http-client", "http-server"]
http-client = ["interfaces", "reqwest", "dep:log"]
http-server = ["interfaces", "dep:warp", "dep:log"]
interfaces = ["dep:async-trait","dep:dyn-clone", "dep:typetag"]
matrix = ["endpoints", "dep:log", "dep:matrix-sdk"]
parse-cfg = ["dep:toml"]
pipe = ["pipe-client", "pipe-server"]
pipe-client = ["interfaces", "dep:log", "dep:nix", "tokio/io-util"]
pipe-server = ["interfaces", "dep:log", "dep:nix","tokio/io-util"]
server = ["interfaces", "endpoints", "tokio", "tokio/signal", "tokio/time"]
server-bin = ["server", "parse-cfg", "dep:directories", "dep:simple_logger"]
vendored-tls = ["reqwest/native-tls-vendored"]

[dependencies]
async-trait = { version = "0.1", optional = true }
blake3 = "1"
directories = { version = "5.0", optional = true }
dyn-clone = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
matrix-sdk = { version = "0.6", optional = true }
nix = { version = "0.26", features = ["fs", "net"], default-features = false, optional = true }
reqwest = { version = "0.11", optional = true }
serde = { version = "1", features = ["default", "derive"] }
serde_json = "1"
simple_logger = { version = "4.1", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"], default-features = false, optional = true }
toml = { version = "0.7", features = ["parse"], default-features = false, optional = true }
typetag = { version = "0.2", optional = true }
warp = { version = "0.3", optional = true }

[lib]
name = "pass_it_on"
doctest = false

[[bin]]
name = "pass-it-on-server"
required-features = ["server-bin"]

[[example]]
name = "simple_client"
required-features = ["client", "http-client", "parse-cfg"]

[[test]]
name = "client_configuration_tests"
required-features = ["client", "parse-cfg"]

[[test]]
name = "server_configuration_tests"
required-features = ["server", "http-server", "parse-cfg"]

[profile.release]
lto = true
codegen-units = 1
